...
        android:layout_marginStart="@dimen/_10ssp"
        app:layout_constraintStart_toEndOf="@+id/posterDetailFragmentIV"
        app:layout_constraintTop_toTopOf="@+id/posterDetailFragmentIV"
        android:layout_marginLeft="@dimen/_10ssp" />

    <TextView
        android:id="@+id/dateMovieDetailFragmentTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/datetime"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintStart_toStartOf="@+id/titleMovieDetailFragmentTV"
...
